# dOS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  client  client.c  client.py  client_private.h  client_public.h  cmake_install.cmake  dOS  makefile  packets.c  packets.h  server.py  thoughts  timelapse.py  types.h
device/: .gitignore  CMakeLists.txt  makefile
device/include/: dos_cddp_public.h  dos_snsr_public.h
device/lib/cddp/: CMakeLists.txt  Makefile
device/lib/cddp/include/: cddp_private.h  cddp_public.h
device/lib/cddp/src/: cddp.c
device/lib/err/: CMakeLists.txt
device/lib/err/include/: err_public.h
device/lib/lndp/: CMakeLists.txt
device/lib/lndp/include/: lndp_private.h  lndp_public.h
device/lib/lndp/src/: lndp.c
device/lib/net/: CMakeLists.txt
device/lib/net/include/: net_private.h  net_public.h
device/lib/net/src/: net.c
device/lib/prox/: CMakeLists.txt  Makefile
device/lib/prox/include/: prox_private.h  prox_public.h
device/lib/prox/src/: prox.c
device/lib/sim/cddp/: CMakeLists.txt  Makefile
device/lib/sim/cddp/include/: sim_cddp_public.h
device/lib/sim/cddp/src/: sim_cddp.c
device/lib/sim/lndp/: CMakeLists.txt
device/lib/sim/lndp/include/: sim_lndp_private.h  sim_lndp_public.h
device/lib/sim/lndp/src/: sim_lndp.c
device/lib/sim/net/: CMakeLists.txt
device/lib/sim/net/include/: sim_net_private.h  sim_net_public.h
device/lib/sim/net/src/: sim_net.c
device/lib/sim/prox/: CMakeLists.txt  Makefile
device/lib/sim/prox/include/: sim_prox_private.h  sim_prox_public.h
device/lib/sim/snsr/: CMakeLists.txt
device/lib/sim/snsr/include/: sim_snsr_dist_private.h  sim_snsr_dist_public.h  sim_snsr_private.h  sim_snsr_public.h
device/lib/sim/snsr/src/: sim_snsr.c  sim_snsr_dist.c
device/lib/snsr/: CMakeLists.txt  Makefile
device/lib/snsr/include/: snsr_private.h  snsr_public.h
device/lib/snsr/src/: snsr.c
device/src/: client_main.c  dos_cddp.c  dos_prox.c  dos_snsr.c
include/: cddp_public.h  dos_cddp_private.h  dos_cddp_public.h  dos_pkt_def_public.h  dos_pkt_private.h  dos_pkt_public.h  dos_prox_public.h  syn_mem_private.h  syn_mem_public.h  syn_mtx_public.h  syn_sem_public.h  syn_ses_public.h  syn_tsk_private.h  syn_tsk_public.h  syn_typ_public.h
lib/cddp/: Makefile
lib/cddp/include/: cddp_private.h  cddp_public.h
lib/cddp/src/: cddp.c
lib/prox/: CMakeLists.txt  Makefile
lib/prox/include/: prox_private.h  prox_public.h
lib/prox/src/: prox.c
lib/sim/cddp/: CMakeLists.txt  cmake_install.cmake
lib/sim/cddp/include/: sim_cddp_private.h  sim_cddp_public.h
lib/sim/cddp/src/: sim_cddp.c
lib/sim/prox/: CMakeLists.txt  Makefile
lib/sim/prox/src/: sim_prox.c
server/: server.py  test.py
server/CDDP/: __init__.py  api.py  cddp.py  core.py  device.py  packet.py
server/monitor-app/: .eslintcache  package-lock.json  package.json
src/: cddp.c  client_main.c  dos_cddp.c  dos_pkt.c  dos_prox.c  syn_mem.c  syn_tsk.c
